--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,11 @@
 
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
-    <title>Formulaire de Prédiction de Perte de Clientèle</title>
+    <title>Formulaire de Prédiction de la Perte de Clientèle</title>
 </head>
 <body>
     <div class="container">
-        <header>Formulaire à Plusieurs Étapes</header>
+        <header>Formulaire de Prédiction de la Perte de Clientèle</header>
         <div class="steps">
             <span class="circle active">1</span>
             <span class="circle">2</span>
@@ -23,66 +23,65 @@
                 <span class="indicator"></span>
             </div>
         </div>
-        <form>
+        <form id="predictionForm" action="/" method="POST">
             <div class="form-section active" id="customerDetails">
                 <header>Détails du Client</header>
                 <div class="fields">
                     <div class="input-field">
-                        <label>Citoyen Senior</label>
-                        <select id="seniorCitizen" required>
+                        <label for="seniorCitizen">Citoyen Senior</label>
+                        <select id="seniorCitizen" name="seniorCitizen" required>
                             <option disabled selected>Sélectionner</option>
-                            <option>Oui</option>
-                            <option>Non</option>
+                            <option value=1>Oui</option>
+                            <option value=0>Non</option>
                         </select>
                     </div>
                     <div class="input-field">
-                        <label>Charges Mensuelles</label>
-                        <input type="number" id="monthlyCharges" step="0.01" placeholder="Entrer les charges mensuelles" required>
+                        <label for="monthlyCharges">Charges Mensuelles</label>
+                        <input type="number" id="monthlyCharges" name="monthlyCharges" step="0.01" placeholder="Entrer les charges mensuelles" required>
                     </div>
                     <div class="input-field">
-                        <label>Charges Totales</label>
-                        <input type="number" id="totalCharges" step="0.01" placeholder="Entrer les charges totales" required>
+                        <label for="totalCharges">Charges Totales</label>
+                        <input id="totalCharges" type="number" name="totalCharges" step="0.01" placeholder="Entrer les charges totales" required>
                     </div>
                     <div class="input-field">
-                        <label>Genre</label>
-                        <select id="gender" required>
+                        <label for="gender">Genre</label>
+                        <select id="gender" name="gender" required>
                             <option disabled selected>Sélectionner le genre</option>
-                            <option>Homme</option>
-                            <option>Femme</option>
-                            <option>Autre</option>
+                            <option value="Male">Homme</option>
+                            <option value="Female">Femme</option>
                         </select>
                     </div>
                     <div class="input-field">
-                        <label>Partenaire</label>
-                        <select id="partner" required>
+                        <label for="partner">Partenaire</label>
+                        <select id="partner" name="partner" required>
                             <option disabled selected>Sélectionner</option>
-                            <option>Oui</option>
-                            <option>Non</option>
+                            <option value="Yes">Oui</option>
+                            <option value="No">Non</option>
                         </select>
                     </div>
                     <div class="input-field">
-                        <label>Dépendants</label>
-                        <select id="dependents" required>
+                        <label for="dependents">Dépendants</label>
+                        <select id="dependents" name="dependents" required>
                             <option disabled selected>Sélectionner</option>
-                            <option>Oui</option>
-                            <option>Non</option>
+                            <option value="Yes">Oui</option>
+                            <option value="No">Non</option>
                         </select>
                     </div>
                     <div class="input-field">
-                        <label>Service Téléphonique</label>
-                        <select id="phoneService" required>
+                        <label for="phoneService">Service Téléphonique</label>
+                        <select id="phoneService" name="phoneService" required>
                             <option disabled selected>Sélectionner</option>
-                            <option>Oui</option>
-                            <option>Non</option>
+                            <option value="Yes">Oui</option>
+                            <option value="No">Non</option>
                         </select>
                     </div>
                     <div class="input-field">
-                        <label>Lignes Multiples</label>
-                        <select id="multipleLines" required>
+                        <label for="multipleLines">Lignes Multiples</label>
+                        <select id="multipleLines" name="multipleLines" required>
                             <option disabled selected>Sélectionner</option>
-                            <option>Oui</option>
-                            <option>Non</option>
-                            <option hidden>Aucun service téléphonique</option>
+                            <option value="Yes">Oui</option>
+                            <option value="No">Non</option>
+                            <option value="No phone service" hidden>Aucun service téléphonique</option>
                         </select>
                     </div>
                 </div>
@@ -91,66 +90,66 @@
                 <header>Détails du Service</header>
                 <div class="fields">
                     <div class="input-field">
-                        <label>Service Internet</label>
-                        <select id="internetService" required>
+                        <label for="internetService">Service Internet</label>
+                        <select id="internetService" name="internetService" required>
                             <option disabled selected>Sélectionner</option>
-                            <option>DSL</option>
-                            <option>Fibre optique</option>
-                            <option>Aucun</option>
+                            <option value="DSL">DSL</option>
+                            <option value="Fiber optic">Fibre optique</option>
+                            <option value="No">Aucun</option>
                         </select>
                     </div>
                     <div class="input-field">
-                        <label>Sécurité en Ligne</label>
-                        <select id="onlineSecurity" required>
+                        <label for="onlineSecurity">Sécurité en Ligne</label>
+                        <select id="onlineSecurity" name="onlineSecurity" required>
                             <option disabled selected>Sélectionner</option>
-                            <option>Oui</option>
-                            <option>Non</option>
-                            <option hidden>Aucun service internet</option>
+                            <option value="Yes">Oui</option>
+                            <option value="No">Non</option>
+                            <option value="No internet service" hidden>Aucun service internet</option>
                         </select>
                     </div>
                     <div class="input-field">
-                        <label>Sauvegarde en Ligne</label>
-                        <select id="onlineBackup" required>
+                        <label for="onlineBackup">Sauvegarde en Ligne</label>
+                        <select id="onlineBackup" name="onlineBackup" required>
                             <option disabled selected>Sélectionner</option>
-                            <option>Oui</option>
-                            <option>Non</option>
-                            <option hidden>Aucun service internet</option>
+                            <option value="Yes">Oui</option>
+                            <option value="No">Non</option>
+                            <option value="No internet service" hidden>Aucun service internet</option>
                         </select>
                     </div>
                     <div class="input-field">
-                        <label>Protection des Appareils</label>
-                        <select id="deviceProtection" required>
+                        <label for="deviceProtection">Protection des Appareils</label>
+                        <select id="deviceProtection" name="deviceProtection" required>
                             <option disabled selected>Sélectionner</option>
-                            <option>Oui</option>
-                            <option>Non</option>
-                            <option hidden>Aucun service internet</option>
+                            <option value="Yes">Oui</option>
+                            <option value="No">Non</option>
+                            <option value="No internet service" hidden>Aucun service internet</option>
                         </select>
                     </div>
                     <div class="input-field">
-                        <label>Soutien Technique</label>
-                        <select id="techSupport" required>
+                        <label for="techSupport">Soutien Technique</label>
+                        <select id="techSupport" name="techSupport" required>
                             <option disabled selected>Sélectionner</option>
-                            <option>Oui</option>
-                            <option>Non</option>
-                            <option hidden>Aucun service internet</option>
+                            <option value="Yes">Oui</option>
+                            <option value="No">Non</option>
+                            <option value="No internet service" hidden>Aucun service internet</option>
                         </select>
                     </div>
                     <div class="input-field">
-                        <label>Télévision en Streaming</label>
-                        <select id="streamingTV" required>
+                        <label for="streamingTV">Télévision en Streaming</label>
+                        <select id="streamingTV" name="streamingTV" required>
                             <option disabled selected>Sélectionner</option>
-                            <option>Oui</option>
-                            <option>Non</option>
-                            <option hidden>Aucun service internet</option>
+                            <option value="Yes">Oui</option>
+                            <option value="No">Non</option>
+                            <option value="No internet service" hidden>Aucun service internet</option>
                         </select>
                     </div>
                     <div class="input-field">
-                        <label>Films en Streaming</label>
-                        <select id="streamingMovies" required>
+                        <label for="streamingMovies">Films en Streaming</label>
+                        <select id="streamingMovies" name="streamingMovies" required>
                             <option disabled selected>Sélectionner</option>
-                            <option>Oui</option>
-                            <option>Non</option>
-                            <option hidden>Aucun service internet</option>
+                            <option value="Yes">Oui</option>
+                            <option value="No">Non</option>
+                            <option value="No internet service" hidden>Aucun service internet</option>
                         </select>
                     </div>
                 </div>
@@ -159,35 +158,35 @@
                 <header>Détails du Contrat</header>
                 <div class="fields">
                     <div class="input-field">
-                        <label>Contrat</label>
-                        <select id="contract" required>
+                        <label for="contract">Contrat</label>
+                        <select id="contract" name="contract" required>
                             <option disabled selected>Sélectionner</option>
-                            <option>Mois à mois</option>
-                            <option>Un an</option>
-                            <option>Deux ans</option>
+                            <option value="Month-to-month">Mois à mois</option>
+                            <option value="One year">Un an</option>
+                            <option value="Two year">Deux ans</option>
                         </select>
                     </div>
                     <div class="input-field">
-                        <label>Facturation Sans Papier</label>
-                        <select id="paperlessBilling" required>
+                        <label for="paperlessBilling">Facturation Sans Papier</label>
+                        <select id="paperlessBilling" name="paperlessBilling" required>
                             <option disabled selected>Sélectionner</option>
-                            <option>Oui</option>
-                            <option>Non</option>
+                            <option value="Yes">Oui</option>
+                            <option value="No">Non</option>
                         </select>
                     </div>
                     <div class="input-field">
-                        <label>Méthode de Paiement</label>
-                        <select id="paymentMethod" required>
+                        <label for="paymentMethod">Méthode de Paiement</label>
+                        <select id="paymentMethod" name="paymentMethod" required>
                             <option disabled selected>Sélectionner</option>
-                            <option>Chèque électronique</option>
-                            <option>Chèque envoyé par la poste</option>
-                            <option>Virement bancaire (automatique)</option>
-                            <option>Carte de crédit (automatique)</option>
+                            <option value="Electronic check">Chèque électronique</option>
+                            <option value="Mailed check">Chèque envoyé par la poste</option>
+                            <option value="Bank transfer (automatic)">Virement bancaire (automatique)</option>
+                            <option value="Credit card (automatic)">Carte de crédit (automatique)</option>
                         </select>
                     </div>
                     <div class="input-field">
-                        <label>Durée (mois)</label>
-                        <input type="number" id="tenure" placeholder="Entrer la durée" required>
+                        <label for="tenure">Durée (mois)</label>
+                        <input type="number" id="tenure" name="tenure" placeholder="Entrer la durée du contrat" required>
                     </div>
                 </div>
             </div>
