--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/initialize.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styleadmin.css') }}">
 
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
@@ -15,11 +16,11 @@
     <nav>
         <div class="menu-items">
             <ul class="nav-links">
-                <li><a href="#">
+                <li><a href="{{ url_for('admin') }}">
                     <i class="uil uil-estate"></i>
                     <span class="link-name">Dashboard</span>
                 </a></li>
-                <li><a href="#">
+                <li><a href="{{ url_for('liste') }}">
                     <i class="uil uil-files-landscapes"></i>
                     <span class="link-name">Content</span>
                 </a></li>
@@ -46,85 +47,84 @@
 
                 <div class="boxes">
                     <div class="box box1">
-                        <i class="uil uil-thumbs-up"></i>
-                        <span class="text">Total Likes</span>
-                        <span class="number">50,120</span>
+                        <i class="uil uil-graph-bar"></i>
+                        <span class="text">Nombre de Prédictions</span>
+                        <span class="number">{{ nombre_total_de_predictions }}</span>
                     </div>
                     <div class="box box2">
-                        <i class="uil uil-comments"></i>
-                        <span class="text">Comments</span>
-                        <span class="number">20,120</span>
+                        <i class="uil uil-smile"></i>
+                        <span class="text">Clients Fidèles</span>
+                        <span class="number">{{ clients_fideles }}</span>
                     </div>
                     <div class="box box3">
-                        <i class="uil uil-share"></i>
-                        <span class="text">Total Share</span>
-                        <span class="number">10,120</span>
+                        <i class="uil uil-frown"></i>
+                        <span class="text">Clients Perdus</span>
+                        <span class="number">{{ clients_perdus }}</span>
                     </div>
                 </div>
             </div>
 
+            
             <div class="activity">
                 <div class="title">
                     <i class="uil uil-clock-three"></i>
-                    <span class="text">Recent Activity</span>
+                    <span class="text">Activité Récente</span>
                 </div>
 
                 <div class="activity-data">
                     <div class="data names">
-                        <span class="data-title">Name</span>
-                        <span class="data-list">Prem Shahi</span>
-                        <span class="data-list">Deepa Chand</span>
-                        <span class="data-list">Manisha Chand</span>
-                        <span class="data-list">Pratima Shahi</span>
-                        <span class="data-list">Man Shahi</span>
-                        <span class="data-list">Ganesh Chand</span>
-                        <span class="data-list">Bikash Chand</span>
+                        <span class="data-title">Genre</span>
+                        {% for prediction in predictions_recent %}
+                            {% if prediction['gender'] == 'Female' %}
+                            <span class="data-list">Femme</span>
+                            {% else %}
+                            <span class="data-list">Homme</span>
+                            {% endif %}
+                        {% endfor %}
                     </div>
                     <div class="data email">
-                        <span class="data-title">Email</span>
-                        <span class="data-list">premshahi@gmail.com</span>
-                        <span class="data-list">deepachand@gmail.com</span>
-                        <span class="data-list">prakashhai@gmail.com</span>
-                        <span class="data-list">manishachand@gmail.com</span>
-                        <span class="data-list">pratimashhai@gmail.com</span>
-                        <span class="data-list">manshahi@gmail.com</span>
-                        <span class="data-list">ganeshchand@gmail.com</span>
+                        <span class="data-title">Partenaire</span>
+                        {% for prediction in predictions_recent %}
+                            {% if prediction['Partner'] == 'Yes' %}
+                            <span class="data-list">Oui</span>
+                            {% else %}
+                            <span class="data-list">Non</span>
+                            {% endif %}
+                        {% endfor %}
                     </div>
                     <div class="data joined">
-                        <span class="data-title">Joined</span>
-                        <span class="data-list">2022-02-12</span>
-                        <span class="data-list">2022-02-12</span>
-                        <span class="data-list">2022-02-13</span>
-                        <span class="data-list">2022-02-13</span>
-                        <span class="data-list">2022-02-14</span>
-                        <span class="data-list">2022-02-14</span>
-                        <span class="data-list">2022-02-15</span>
+                        <span class="data-title">Date</span>
+                        {% for prediction in predictions_recent %}
+                            <span class="data-list">{{ prediction['timestamp'] }}</span>
+                        {% endfor %}
                     </div>
                     <div class="data type">
-                        <span class="data-title">Type</span>
-                        <span class="data-list">New</span>
-                        <span class="data-list">Member</span>
-                        <span class="data-list">Member</span>
-                        <span class="data-list">New</span>
-                        <span class="data-list">Member</span>
-                        <span class="data-list">New</span>
-                        <span class="data-list">Member</span>
+                        <span class="data-title">Contrat</span>
+                        {% for prediction in predictions_recent %}
+                            {% if prediction['Contract'] == 'One year' %}
+                            <span class="data-list">Un an</span>
+                            {% elif prediction['Contract'] == 'Two year' %}
+                            <span class="data-list">Deux ans</span>
+                            {% else %}
+                            <span class="data-list">Mois par mois</span>
+                            {% endif %}
+                        {% endfor %}
                     </div>
                     <div class="data status">
-                        <span class="data-title">Status</span>
-                        <span class="data-list">Liked</span>
-                        <span class="data-list">Liked</span>
-                        <span class="data-list">Liked</span>
-                        <span class="data-list">Liked</span>
-                        <span class="data-list">Liked</span>
-                        <span class="data-list">Liked</span>
-                        <span class="data-list">Liked</span>
+                        <span class="data-title">Churn</span>
+                        {% for prediction in predictions_recent %}
+                            {% if prediction['Churn'] == '[0]' %}
+                            <span class="data-list">Client fidèle</span>
+                            {% else %}
+                            <span class="data-list">Client perdu</span>
+                            {% endif %}
+                        {% endfor %}
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="{{ url_for('static', filename='js/scriptadmin.css') }}"></script>
 </body>
 </html>
